--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #ddd !important;
+  scrollbar-color: #c2c2c2 #fff;
+  scrollbar-width: thin;
 }
 
 code {
@@ -22,18 +24,18 @@ code {
   height: 8px !important;
 }
 ::-webkit-scrollbar-button{
-  width: 0px !important;
-  height: 0px !important;
+  width: 1px !important;
+  height: 1px !important;
 }
 ::-webkit-scrollbar-thumb{
   background: #c4c4c4 !important;
   border: 0px none #ffffff !important;
-  border-radius: 50px !important;
+  /* border-radius: 50px !important; */
 }
 ::-webkit-scrollbar-track{
   background: #e5e5e5 !important;
   border: 0px none #ffffff !important;
-  border-radius: 50px !important;
+  /* border-radius: 50px !important; */
 }
 ::-webkit-scrollbar-corner{
   background: transparent !important;
